--- a/HTML5 e CSS3 Recursos Especiais/HTML5/novas-tags.html
+++ b/HTML5 e CSS3 Recursos Especiais/HTML5/novas-tags.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+
+    <!--Esse shiv e para versão antiga de Explores-->
+
+    <!--Esse shiv e para fiar direto na pasta js-->
+    <!--[if lt IE 9]>
+	<script src="/html5shiv.js"></script>
+    <![endif]-->
+
+    <!--Esse shiv e para fiar direto no codigo-->
+    <!--[if lt IE 9]>
+	<script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
+
 </head>
 <body>
 
