--- a/Bootstrap Design Responsivo/Bootstrap/Tamanhos-Bordas.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Tamanhos-Bordas.html
@@ -11,23 +11,26 @@
 
   <body style="margin-bottom: 200px; width: 600px; margin: 0 auto;">
 
+    <br>
+    <br>
+
     <!-- classes de largura -->
-    <div class="bg-primary">width 25%</div>
-    <div class="bg-primary">width 50%</div>
-    <div class="bg-primary">width 75%</div>
-    <div class="bg-primary">width 100%</div>
-    <div class="bg-primary">width auto</div>
+    <div class="bg-primary w-25">width 25%</div>
+    <div class="bg-primary w-50">width 50%</div>
+    <div class="bg-primary w-75">width 75%</div>
+    <div class="bg-primary w-100">width 100%</div>
+    <div class="bg-primary w-auto">width auto</div>
 
     <br>
     <br>
 
     <!-- classes de altura -->
     <div style="height: 300px;border: 1px solid gray;">
-        <div class="bg-warning d-inline-block">height 25%</div>
-        <div class="bg-warning d-inline-block">height 50%</div>
-        <div class="bg-warning d-inline-block">height 75%</div>
-        <div class="bg-warning d-inline-block">height 100%</div>
-        <div class="bg-warning d-inline-block">height auto</div>
+        <div class="bg-warning d-inline-block h-25">height 25%</div>
+        <div class="bg-warning d-inline-block h-50">height 50%</div>
+        <div class="bg-warning d-inline-block h-75">height 75%</div>
+        <div class="bg-warning d-inline-block h-100">height 100%</div>
+        <div class="bg-warning d-inline-block h-auto">height auto</div>
     </div>
 
     <br>
@@ -44,11 +47,11 @@
     border-<cor>: primary, secondary, success, 
         info, warning, danger, light, dark, white
     -->
-    <div class="bg-white mb-2">todas as bordas</div>
-    <div class="bg-white mb-2">borda superior</div>
-    <div class="bg-white mb-2">borda inferior</div>
-    <div class="bg-white mb-2">borda direita</div>
-    <div class="bg-white mb-2">borda esquerda</div>
+    <div class="bg-white mb-2 border border-secondary">todas as bordas</div>
+    <div class="bg-white mb-2 border-top border-danger">borda superior</div>
+    <div class="bg-white mb-2 border-bottom">borda inferior</div>
+    <div class="bg-white mb-2 border-start">borda direita</div>
+    <div class="bg-white mb-2 border-end">borda esquerda</div>
 
     <br>
     <br>
@@ -57,12 +60,12 @@
     opções: rounded, rounded-top, rounded-right, 
             rounded-right, rounded-left, rounded-circle
     -->
-    <div class="bg-light mb-2 border">rounded</div>
-    <div class="bg-light mb-2 border">rounded top</div>
-    <div class="bg-light mb-2 border">rounded bottom</div>
-    <div class="bg-light mb-2 border">rounded right</div>
-    <div class="bg-light mb-2 border">rounded left</div>
-    <div class="bg-light mb-2 p-5 border w-25">rounded circle</div>
+    <div class="bg-light mb-2 border rounded">rounded</div>
+    <div class="bg-light mb-2 border rounded-top">rounded top</div>
+    <div class="bg-light mb-2 border rounded-bottom">rounded bottom</div>
+    <div class="bg-light mb-2 border rounded-start">rounded right</div>
+    <div class="bg-light mb-2 border rounded-end">rounded left</div>
+    <div class="bg-light mb-2 p-5 border w-25 rounded-circle">rounded circle</div>
 
     <br>
     <br>
