--- a/Bootstrap Design Responsivo/Bootstrap/Botões.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Botões.html
@@ -22,7 +22,7 @@
     <h3>Botões</h3>
     <button class="" type="button">Clique</button>
 
-    <h3>Botões com diferentes tags</h3>
+    <h3>Botões com Diferentes Tags</h3>
     <a class="" href="#">Link</a>
     <button class="" type="submit">Submit</button>
     <input class="" type="button" value="Button">
@@ -32,13 +32,13 @@
     <!-- Botoes com contorno
     btn-outline-<formato>
     -->
-    <h3>Botões com contorno</h3>
+    <h3>Botões com Contorno</h3>
     <button class="" type="button">Clique</button>
 
     <!-- Tamanhos de botões
     opções: btn-lg, btn-sm, btn-block
     -->
-    <h3>Tamanhos dos botões</h3>
+    <h3>Tamanhos dos Botões</h3>
     <button class="" type="button">Grande</button>
     <button class="" type="button">Pequeno</button>
     <br><br>
@@ -47,21 +47,21 @@
     <!-- Estados dos botões
     opções: active, disabled
     -->
-    <h3>Estados de botões</h3>
+    <h3>Estados de Botões</h3>
     <button class="" type="button">Normal</button>
     <button class="" type="button">Ativo</button>
     <button class="" type="button">Inativo</button>
     <br><br>
     <button class="" type="button">Alternar</button>
 
-    <h3>Grupos de botões - horizontal</h3>
+    <h3>Grupos de Botões - horizontal</h3>
     <div>
         <button class="" type="button">Esquerda</button>
         <button class="" type="button">Centro</button>
         <button class="" type="button">Direita</button>
     </div>
 
-    <h3>Grupos de botões - vertical</h3>
+    <h3>Grupos de Botões - vertical</h3>
     <div>
         <button class="" type="button">Topo</button>
         <button class="" type="button">Meio</button>
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <h3>Botões dropdown</h3>
+    <h3>Botões Dropdown</h3>
     <div>
         <button class="" type="button">
             Clique
