--- a/Bootstrap Design Responsivo/Bootstrap/Input-Group.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Input-Group.html
@@ -64,7 +64,7 @@
         <div class="input-group">
             <div class="input-group-prepend">
                <div class="input-group-text">
-                   <input type="radio">
+                   <input type="checkbox">
                </div> 
             </div>
             <input type="text" class="form-control">
