--- a/Bootstrap Design Responsivo/Bootstrap/Jumbotron-Alinhamento-imagens.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Jumbotron-Alinhamento-imagens.html
@@ -17,7 +17,7 @@
 
     
     <h3 class="border-bottom">Jumbotron</h3>
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <div class="container">
           <h1 class="display-4">Música para todos.</h1>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
