--- a/Bootstrap Design Responsivo/Bootstrap/Projeto-Bootstrap4/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projeto-Bootstrap4/index.html
@@ -11,10 +11,10 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <title>Olá, mundo!</title>
+    <title>Olá, Mundo!</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <h1>Olá, Mundo!</h1>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
