--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -26,30 +26,50 @@
             <img src="../Finans/img/logo.png" width="142">
           </a>
 
-          <div class="collapse navbar-collapse">
+            <!-- MENU Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-target">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navegação -->
+        <div class="collapse navbar-collapse" id="nav-target">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Recursos</a>
+                <a class="nav-link" href="#">Recursos</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Benefícios</a>
+                <a class="nav-link" href="#">Benefícios</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Preços</a>
+                <a class="nav-link" href="#">Preços</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="btn btn-outline-light ml-4">Entra</a>
               </li>
             </ul>
+        </div>
 
           </div>
 
         </div>
       </nav>
     </header><!-- /fim Cabeçalho -->
+
+    <section id="home"><!-- Inicio Section -->
+      <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          texto
+        </div>
+        <div class="col-md-6">
+          imagem
+        </div>
+      </div>
+    </div>
+    </section><!-- /fim Section -->
 
 
 
