--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -65,7 +65,7 @@
           texto
         </div>
         <div class="col-md-6">
-          imagem
+          imagens
         </div>
       </div>
     </div>
