--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -62,7 +62,7 @@
       <div class="container">
       <div class="row">
         <div class="col-md-6">
-          textos
+          textosss
         </div>
         <div class="col-md-6">
           imagens
