--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -61,11 +61,35 @@
     <section id="home"><!-- Inicio Section -->
       <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          textosss
-        </div>
-        <div class="col-md-6">
-          imagens
+        <div class="col-md-6 d-flex"><!-- Textos da Seção -->
+          <div class="align-self-center">
+            <h1 class="display-4">Suas Contas, Descomplicadas</h1>
+            <p>
+              Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar sua vida financeira.
+            </p>
+
+            <form class="mt-4 mb-4">
+              <div class="input-group input-group-lg">
+                <input type="text" placeholder="Seu E-mail" class="form-control">
+              </div>
+              <div class="input-group-append">
+                <button type="button" class="btn btn-primary">Cadastre-se</button>
+              </div>
+            </form>
+
+            <p>Disponível para
+              <a href="#" class="btn btn-outline-light">
+                <i class="fab fa-brands fa-android"></i>
+              </a>
+              <a href="#" class="btn btn-outline-light">
+                <i class="fab fa-brands fa-apple"></i>
+              </a>
+            </p>
+
+          </div>
+        </div><!-- /fim Textos da Seção -->
+        <div class="col-md-6 d-none d-md-block">
+          <img src="../Finans/img/capa-mulher.png" alt="">
         </div>
       </div>
     </div>
