--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -95,6 +95,21 @@
     </div>
     </section><!-- /fim Section -->
 
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              Textos
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="../Finans/img/saiba.png" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
 
