--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Finans/index.html
@@ -95,12 +95,17 @@
     </div>
     </section><!-- /fim Section -->
 
-    <section>
+    <section class="caixa"><!-- Inicio Saiba -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
             <div class="align-self-center">
-              Textos
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Com o Finans, você categoriza todos os seus lançamentos
+                Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+              </p>
+              <a href="#" class="btn btn-primary">Veja Mais</a>
             </div>
           </div>
           <div class="col-md-6">
@@ -108,7 +113,87 @@
           </div>
         </div>
       </div>
-    </section>
+    </section><!-- /fim Saiba -->
+
+    <section class="caixa"> <!-- Inicio juros -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="../Finans/img/juros.png" class="img-fluid">
+          </div>
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O Finans 
+                avisa você: receba alertas de contas a pagar e a receber!
+              </p>
+              <a href="#" class="btn btn-primary">Veja Mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- /fim juros -->
+
+    <section class="caixa"> <!-- Inicio Recursos -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="../Finans/img/facil.png" alt="" class="img-fluid">
+            <h4>Fácil de Usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles incríveis, 
+              essenciais para suas finanças. Simples como tem que ser!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="../Finans/img/economize.png" alt="" class="img-fluid">
+            <h4>Economize seu Tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle e 
+              aproveite seu tempo com o que realmente importa pra você!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="../Finans/img/suporte.png" alt="" class="img-fluid">
+            <h4>Suporte Amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! 
+              A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section><!-- /fim Recursos -->
+
+    <footer class="mt-4 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="#">Home</a>
+              <a href="#">Recursos</a>
+              <a href="#">Benefícios</a>
+              <a href="#">Preço</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="#" class="btn btn-outline-dark">
+              <i class="fab fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-brands fa-youtube"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
