--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     
-    <header>
+    <header><!-- inicio cabeçalho -->
         <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-trasparente">
             <div class="container">
                 <a href="../Spotify/index.html">
@@ -54,9 +54,19 @@
 
             </div>
         </nav>
-    </header>
+    </header><!-- /Fim cabeçalho -->
 
-    conteudo
+    <section id="home" class="d-flex"><!-- inicio Home -->
+        <div class="container align-self-center">
+            <div class="row">
+                <div class="col-md-12 capa">
+                    <h1>Música para todos</h1>
+                    <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o Spotify Free</a>
+                    <a href="#" class="btn btn-lg btn-custom btn-branco">Obter Spotify Premium</a>
+                </div>
+            </div>
+        </div>
+    </section><!-- /Fim Home -->
 
 
     <!-- JavaScript (Opcional) -->
