--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
@@ -68,6 +68,75 @@
         </div>
     </section><!-- /Fim Home -->
 
+    <section id="servicos" class="caixa"><!-- inicio servicos -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row albuns">
+                        <div class="col-md-6">
+                            <img src="..//Spotify/imagens/img1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="../Spotify/imagens/img2.jpg" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <div class="row albuns">
+                        <div class="col-md-6">
+                            <img src="..//Spotify/imagens/img3.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="../Spotify/imagens/img4.jpg" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+
+                    <h2>O que o Spotify tem?</h2>
+
+                    <h3>Músicas</h3>
+                    <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+                    <h3>Playlists</h3>
+                    <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+                    <h3>Novos lançamentos</h3>
+                    <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+
+                </div>
+            </div>
+        </div>
+    </section><!-- /Fim servicos -->
+
+    <section id="recursos" class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    
+                    <h2>Fácil</h2>
+                    <h3>Buscar</h3>
+                    <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+                    <h3>Navegar</h3>
+                    <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+                    <h3>Descobrir</h3>
+                    <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+
+                </div>
+                <div class="col-md-8">
+                    <div class="row rotacionar">
+                        <div class="col-md-6">
+                            <img src="../Spotify/imagens/iphone1.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="../Spotify/imagens/iphone2.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
