--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/index.html
@@ -107,7 +107,7 @@
         </div>
     </section><!-- /Fim servicos -->
 
-    <section id="recursos" class="caixa">
+    <section id="recursos" class="caixa"> <!-- inicio recursos -->
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -123,7 +123,7 @@
                     <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
 
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8  d-none d-md-block">
                     <div class="row rotacionar">
                         <div class="col-md-6">
                             <img src="../Spotify/imagens/iphone1.png" class="img-fluid" alt="">
@@ -135,7 +135,55 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><!-- /Fim recursos -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="../Spotify/imagens/spotify.svg" width="142" alt="">
+                </div>
+                <div class="col-md-2">
+                    <h4>Company</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Empregos</a></li>
+                        <li><a href="#">Imprensa</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>Comunidades</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Artistas</a></li>
+                        <li><a href="#">Desenvolvedores</a></li>
+                        <li><a href="#">Marca</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h4>Links Uteis</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="#">Ajuda</a></li>
+                        <li><a href="#">Presente</a></li>
+                        <li><a href="#">Player da web</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="../Spotify/imagens/facebook.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="../Spotify/imagens/twitter.png" alt=""></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="../Spotify/imagens/instagram.png" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- JavaScript (Opcional) -->
