--- a/Bootstrap Design Responsivo/Bootstrap/Alertas-Barra-de-Progresso.html
+++ b/Bootstrap Design Responsivo/Bootstrap/Alertas-Barra-de-Progresso.html
@@ -56,12 +56,12 @@
       <button class="close" type="button" data-dismiss="alert">
         &times;
       </button>
-      <strong>Fechar</strong> Alerta com botão fechar
+      <strong>Fechar</strong> Alerta com Botão Fechar
     </div>
     <br><br>
     
 
-    <h2>Alerta com mais conteúdos</h2>
+    <h2>Alerta com mais Conteúdos</h2>
     <div class="alert alert-success">
       
       <h4>Título</h4>
