--- a/JavaScript/operadores-aritimeticos.html
+++ b/JavaScript/operadores-aritimeticos.html
@@ -4,12 +4,33 @@
     <meta charset="utf-8">
     <title>JavaScript</title>
     <script>
+/*       var num1 = prompt('Digite o valor de num1')
+        var num2 = prompt('Digite o valor de num2')
 
-        var num1 = 9
-        var num2= 2
+        num1 = parseInt(num1)
+        num2 = parseInt(num2)
 
-        document.write('A soma entre ' + num1 + ' e ' + num2 + ' e: ' + (num1 + num2))
+        document.write('A soma entre ' + num1 + ' e ' + num2 + ' é: ' + (num1 + num2) + '<br />')
+        document.write('A subtração entre ' + num1 + ' e ' + num2 + ' é: ' + (num1 - num2) + '<br />')
+        document.write('A multiplicação entre ' + num1 + ' e ' + num2 + ' é: ' + (num1 * num2) + '<br />')
+        document.write('A divisão entre ' + num1 + ' e ' + num2 + ' é: ' + (num1 / num2) + '<br />')
+        document.write('O módulo entre ' + num1 + ' e ' + num2 + ' é: ' + (num1 % num2) + '<br />')
+        document.write('O incremento de ' + num1 + ' é: ' + (++num1) + '<br />')
+        document.write(num1 + '<br />')
+        document.write('O decremento de ' + num1 + ' é: ' + (--num1) + '<br />')
+        document.write(num1) 
+        */
 
+        var teste = 'Olá'
+
+        // teste = teste + 5
+        // teste += 5
+        // teste -= 5
+        // teste *= 5
+        // teste /= 5
+        // teste %=3
+        teste += 'Jorge'
+        document.write(teste)
     </script>
 </head>
 <body>
