--- a/JavaScript/operadores-aritimeticos.html
+++ b/JavaScript/operadores-aritimeticos.html
@@ -21,7 +21,7 @@
         document.write(num1) 
         */
 
-        var teste = 'Olá'
+        //var teste = 'Olá'
 
         // teste = teste + 5
         // teste += 5
@@ -29,8 +29,16 @@
         // teste *= 5
         // teste /= 5
         // teste %=3
-        teste += 'Jorge'
-        document.write(teste)
+        //teste += 'Jorge'
+        //document.write(teste)
+
+        document.write(11 + 5 - 5 * 2 / 2)
+
+        // () aplicar a precendencia
+
+        //1 multiplicação e subtração
+        //2 soma e subtração
+
     </script>
 </head>
 <body>
