--- a/JavaScript/escopo.html
+++ b/JavaScript/escopo.html
@@ -9,9 +9,14 @@
 
        var serie = 'Friends'
 
+       //scopo de bloco
        if (true) {
+        var serie2 = 'Game of thrones'
         document.write(serie)
        }
+       document.write(serie2)
+
+       document.write('<br />')
 
        function x() {
         document.write(serie)
