--- a/JavaScript/array-ordenacao.html
+++ b/JavaScript/array-ordenacao.html
@@ -32,6 +32,9 @@
 
     function ordenaNumeros (a, b) {
       return a - b
+      //< 0 = a ordenado antes de b
+      //> 0 = b ordenado antes de a
+      // == a ordem é mantida
     }
     </script>
 
